@@ -38,33 +38,42 @@
 			    <data android:pathPattern=".*\\.kdbx" />
     		</intent-filter>
     	</activity>
-    	<activity android:name="com.keepassdroid.GroupActivityV3" android:configChanges="orientation|keyboardHidden">
+    	<activity android:name="com.keepassdroid.GroupActivityV3" android:configChanges="orientation|keyboardHidden"
+    		android:theme="@android:style/Theme.NoTitleBar">
             <!-- This metadata entry causes .app.SearchQueryResults to be the default context -->
             <!-- whenever the user invokes search while in this Activity. -->
             <meta-data android:name="android.app.default_searchable"
                        android:value="com.keepassdroid.search.SearchResults" />
     	</activity>
-    	<activity android:name="com.keepassdroid.GroupActivityV4" android:configChanges="orientation|keyboardHidden">
+    	<activity android:name="com.keepassdroid.GroupActivityV4" android:configChanges="orientation|keyboardHidden"
+    		android:theme="@android:style/Theme.NoTitleBar">
             <!-- This metadata entry causes .app.SearchQueryResults to be the default context -->
             <!-- whenever the user invokes search while in this Activity. -->
             <meta-data android:name="android.app.default_searchable"
                        android:value="com.keepassdroid.search.SearchResults" />
     	</activity>
-		<activity android:name="com.keepassdroid.EntryActivity"></activity>
-		<activity android:name="com.keepassdroid.EntryActivityV4"></activity>
-		<activity android:name="com.keepassdroid.LockingActivity"></activity>
-		<activity android:name="com.keepassdroid.EntryEditActivity" android:configChanges="orientation|keyboardHidden"></activity>
+		<activity android:name="com.keepassdroid.EntryActivity" 
+			android:theme="@android:style/Theme.NoTitleBar"></activity>
+		<activity android:name="com.keepassdroid.EntryActivityV4" 
+			android:theme="@android:style/Theme.NoTitleBar"></activity>
+		<activity android:name="com.keepassdroid.LockingActivity" 
+			android:theme="@android:style/Theme.NoTitleBar"></activity>
+		<activity android:name="com.keepassdroid.EntryEditActivity" android:configChanges="orientation|keyboardHidden"
+			android:theme="@android:style/Theme.NoTitleBar"></activity>
 		<activity android:name="com.keepassdroid.GroupEditActivity" android:theme="@android:style/Theme.Dialog"></activity>
-		<activity android:name="com.keepassdroid.IconPickerActivity"></activity>
-		<activity android:name="com.keepassdroid.search.SearchResults" android:launchMode="standard">
+		<activity android:name="com.keepassdroid.IconPickerActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+		<activity android:name="com.keepassdroid.search.SearchResults" android:launchMode="standard"
+			android:theme="@android:style/Theme.NoTitleBar">
 		    <intent-filter>
 			    <action android:name="android.intent.action.SEARCH" />
 			    <category android:name="android.intent.category.DEFAULT" />
 		     </intent-filter>
 			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
 		</activity>
-		<activity android:name="com.keepassdroid.settings.AppSettingsActivity"></activity>
-		<activity android:name="com.keepassdroid.GeneratePasswordActivity"></activity>
+		<activity android:name="com.keepassdroid.settings.AppSettingsActivity" 
+			android:theme="@android:style/Theme.NoTitleBar"></activity>
+		<activity android:name="com.keepassdroid.GeneratePasswordActivity" 
+			android:theme="@android:style/Theme.NoTitleBar"></activity>
 		<service android:name="com.keepassdroid.services.TimeoutService"></service>
 		<meta-data android:name="com.a0soft.gphone.aTrackDog.webURL" android:value="http://keepassdroid.com" />
 	</application>
