@@ -21,28 +21,29 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
 	<!--  Title -->	
-	<TextView android:id="@+id/entry_title"
-	  android:layout_width="wrap_content"
-	  android:layout_height="wrap_content"
-	  android:layout_alignParentLeft="true"
+	<RelativeLayout android:id="@+id/title_block"
 	  android:layout_alignParentTop="true"
-	  android:layout_toLeftOf="@id/entry_icon"
-	  android:minHeight="32dp"
-	  style="@style/ElementTextTitle"/>
-	<ImageView android:id="@+id/entry_icon"
-	  android:layout_alignParentTop="true"
-	  android:layout_alignParentRight="true"
-	  android:layout_width="wrap_content"
-	  android:layout_height="wrap_content"
-	  android:layout_marginLeft="5dp"
-	  android:scaleType="fitXY"
-	  android:src="@drawable/ic99_blank"/>
-	<ImageView android:id="@+id/entry_divider1"
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
-	  android:layout_below="@id/entry_title"
-	  android:scaleType="fitXY"
-	  android:src="@android:drawable/divider_horizontal_dark"/>
+	  android:padding="2dp"
+	  style="@style/WhiteOnBlack">
+		<TextView android:id="@+id/entry_title"
+		  android:layout_width="wrap_content"
+		  android:layout_height="wrap_content"
+		  android:layout_alignParentLeft="true"
+		  android:layout_centerVertical="true"
+		  android:layout_toLeftOf="@id/entry_icon"
+		  android:minHeight="32dp"
+		  style="@style/ElementTextTitle"/>
+		<ImageView android:id="@+id/entry_icon"
+		  android:layout_width="wrap_content"
+		  android:layout_height="wrap_content"
+		  android:layout_alignParentRight="true"
+		  android:layout_centerVertical="true"
+		  android:scaleType="fitXY"
+		  android:src="@drawable/ic99_blank"
+		  style="@style/WhiteOnBlack"/>
+	</RelativeLayout>
 	<Button android:id="@+id/entry_edit"
 	  android:text="@string/menu_edit"
 	  android:layout_width="100sp"
@@ -59,7 +60,7 @@
 	  android:layout_width="fill_parent"
 	  android:layout_height="fill_parent"
 	  android:layout_above="@id/entry_divider2"
-	  android:layout_below="@id/entry_divider1">
+	  android:layout_below="@id/title_block">
 		<TableLayout android:id="@+id/entry_table"
 		  android:layout_height="fill_parent"
 		  android:layout_width="wrap_content">	
