@@ -22,4 +22,5 @@
 	<color name="group">#ffffff</color>
 	<color name="icon_background">#555555</color>
 	<color name="icon_text">#000000</color>
+	<color name="group_header_background">#888888</color>
 </resources>    
