@@ -1,3 +1,4 @@
+  * Layout updates
   * Custom icon support
   
 KeePassDroid (1.7.2)
